# serverlynx

./: .gitignore  CMakeLists.txt  CSharpServerLynx.sln  Directory.Build.props  README.md
MSBuild/CMake/: CMake.Build.targets  CMake.Copy.targets  CMake.csproj
MSBuild/CSharpServerLynx/: CSharpServerLynx.csproj
MSBuild/CSharpServerLynxTests/: CSharpServerLynxTests.csproj
MSBuild/Common/: Banner.txt  BannerTask.targets
SVLUnityProject/Assets/ServerLynx/Scripts/: Native.cs  ServLynx.cs  SockLynx.cs  Util.cs
SVLUnityProject/Assets/ServerLynx/Tests/Editor/: SVLIntegration.cs
include/svlynx/: link.h  service.h  svlynx.h
include/svlynx_lg/: svlynx_lg.h
include/svlynx_sv/: svlynx_sv.h
src/svlynx/: link.c  plugin.c  service.c  service_internal.c  service_internal.h  svlynx.c
src/svlynx_lg/: svlynx_lg.c
src/svlynx_sv/: svlynx_sv.c
tests/: runner_single.c.in  test_plugin.c  test_service.c
